WHY is the autobot still on Java 8